<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">DFA</string>
    <string name="ngo_app">DFA</string>
    <string name="map_key">AIzaSyCzDgxZEHBcpyQq_194iXQvuQQsS5AULmw</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="general_public">General Public</string>
    <string name="drug_free_ngo" translatable="false">Drug Free NGO</string>
    <string name="dashboard">Home</string>
    <string name="toolbar_general_public">Public</string>
    <string name="types_of_crime">Select types of crime</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="email_req">Email<font fgcolor="#006600">*</font></string>
    <string name="contact_no">Contact No</string>
    <string name="level">Set urgency Level</string>
    <string name="description">Description: </string>
    <string name="select_photo">Select Photo</string>
    <string name="select_option">Select Option</string>
    <string name="todo">Todo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="submit">Submit</string>
    <string name="submit_capital">SUBMIT</string>
    <string name="take_photo">Capture Live Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="no_record_found">No record found</string>
    <string name="drugs">Drugs</string>
    <string name="police">Police Home</string>
    <string name="ngo">NGO Home</string>
    <string name="please_select_image">Please select image</string>
    <string name="please_select_media">Please select media</string>
    <string name="select_urgency_level">Please select urgency level</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="ngo_form">NGO Form</string>
    <string name="enter_password">Enter Code</string>
    <string name="welcome_back_password">Please enter code to continue</string>
    <string name="passcode">Code Verification</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="enter_Code">Please enter code</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="report_incident">Report Incident</string>
    <string name="police_station">Police Station</string>
    <string name="police_stations">Police Stations</string>
    <string name="police_officer">Police Officer</string>
    <string name="incident_detail">Incident Description</string>
    <string name="enter_comment">Please enter comment</string>
    <string name="username">Name:</string>
    <string name="crime">Crime Type:</string>
    <string name="general_description">Description:</string>
    <string name="status">State:</string>
    <string name="public_dashboard">General Public Dashboard</string>
    <string name="resolved">Resolved</string>
    <string name="unresolved">Unresolved</string>
    <string name="authentic">Authentic</string>
    <string name="unauthentic">Unauthentic</string>
    <string name="add_comment">Add Comment</string>
    <string name="mark_status">Mark Status</string>
    <string name="crime_types_error">Not getting Crime Types</string>
    <string name="complaint_details">Complaint Details</string>
    <string name="cases_heading">Arunachal Pradesh Police\n &amp; Drug Free Arunachal
</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="email_mobile_hint">Mobile no</string>
    <string name="password">Enter password</string>
    <string name="password_estrick">Password <font fgcolor="#006600">*</font></string>
    <string name="login">Login</string>
    <string name="please_login_to_your_account">Please Login to Your account!</string>
    <string name="submit_nearest_police">Submit to nearest police station</string>
    <string name="submit_particular_police">Submit to particular police station</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_heading">Please Enter The Registered Mobile Number. We Will Send You An OTP.</string>
    <string name="enter_registered_mobile_number">Enter Registered Mobile Number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">New Password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="youAreNotUpdatedMessage">A new version of this app is available. Please update to version&#160;</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="now_popup">&#160;now.</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_adhar_no_here">Enter Aadhaar no here</string>
    <string name="adhar_no_estrick">Aadhaar no</string>
    <string name="enter_first_name">First name</string>
    <string name="first_estrick">First name <font fgcolor="#006600">*</font></string>
    <string name="enter_middle_name">Middle name</string>
    <string name="middle_estrick">Middle name</string>
    <string name="enter_last_name">Last name</string>
    <string name="last_estrick">Last name <font fgcolor="#006600">*</font></string>
    <string name="select_district">Select District</string>
    <string name="destrict_estrick">District <font fgcolor="#006600">*</font></string>
    <string name="enter_email">Email</string>
    <string name="mobile_2">Mobile 2</string>
    <string name="mobile_1">Mobile Number 1</string>
    <string name="mobile_estrick">Mobile Number <font fgcolor="#006600">*</font></string>
    <string name="pin_code">Pin Code</string>
    <string name="pin_code_estrick">Pin Code <font fgcolor="#006600">*</font></string>
    <string name="address_2">Address Line 2</string>
    <string name="address_2_estrick">Address Line 2 <font fgcolor="#006600">*</font></string>
    <string name="address_1">Address Line 1</string>
    <string name="address_1_estrick">Address Line 1 <font fgcolor="#006600">*</font></string>
    <string name="change_image">Change Image</string>
    <string name="update">UPDATE</string>
    <string name="verified">Verified</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_estrick">Confirm Password <font fgcolor="#006600">*</font></string>
    <string name="signup">Signup</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_confirmation_code">Please Enter Confirmation Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="fill_mobile">Please enter the mobile no</string>
    <string name="valid_mobile_number">Please enter valid mobile</string>
    <string name="valid_email">Please enter a valid email id</string>
    <string name="valid_adhar">Please enter a valid Aadhaar number</string>
    <string name="valid_mobile">Please enter valid mobile no</string>
    <string name="valid_pin_code">Please enter pin code</string>
    <string name="valid_address_1">Please enter Address1</string>
    <string name="valid_last_name">Please enter last name</string>
    <string name="valid_first_name">Please enter first name</string>
    <string name="password_empty">Please enter Password field</string>
    <string name="pass_length">Password\'s length should be minimum 6 characters</string>
    <string name="confirm_pass_empty">Please enter Confirm Password field</string>
    <string name="confirm_pass_length">Confirm Password\'s length should be minimum 6 characters</string>
    <string name="confirm_pass_mismatch_pass">Confirm Password doesnot match Password</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="verify_mobileno">Verify Mobile</string>
    <string name="enter_mobileno">"Please enter your Mobile Number "</string>
    <string name="add_your_post_here">Say Something...</string>
    <string name="post">Post</string>
    <string name="enter_the_headline">Enter the text here..</string>
    <string name="nav_my_cases">My Cases</string>
    <string name="nav_edit_profile">Edit Profile</string>
    <string name="nav_password">Change Password</string>
    <string name="nav_my_earning">My Earning</string>
    <string name="nav_invite_friends">Invite Friends</string>
    <string name="nav_terms_and_conditions">Terms and Conditions</string>
    <string name="nav_logout">Logout</string>
    <string name="my_cases">My Cases</string>
    <string name="contibure_title">Contribute to Drug Free Arunachal</string>
    <string name="payment">Payment</string>
    <string name="add_business">Add New Business</string>
    <string name="video_player">Video Player</string>
    <string name="add_comments">Add Comments</string>
    <string name="add_your_comment_here">Add a comment..</string>
    <string name="liked_users">Liked Users</string>
    <string name="commented_users">Commented Users</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="alpha_mumerical">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789</string>
    <string-array name="nav_item_activity_titles">
        <item>My Cases</item>
        <item>Edit Profile</item>
        <item>Change Password</item>
        <item>My Earning</item>
        <item>Invite Friends</item>
        <item>Terms and Condition</item>
        <item>Logout</item>
    </string-array>
    <string name="enter_old_password">Old Password</string>
    <string name="delete_post_title">DELETE POST</string>
    <string name="delete_post_heading">Are you sure that you want to delete this post?</string>
    <string name="delete_case_heading">DELETE CASE</string>
    <string name="hide_case_heading">HIDE CASE</string>
    <string name="delete_case_message">Are you sure that you want to delete this case?</string>
    <string name="hide_case_message">Are you sure that you want to hide this case?</string>
    <string name="enter_comments_validation_message">Please enter your comment first.</string>
    <string name="enter_your_valid_adhaar_no_here">Enter your Aadhaar no here..</string>
    <string name="adhar_not_valid">Aadhaar No is not valid. Please enter a valid aadhaar no</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="my_earnings">My Earning</string>
    <string name="location_string">Location String</string>
    <string name="location_message">Location message</string>
    <string name="location_title">Location Title</string>
    <string name="crime_type">Crime type :</string>
    <string name="state">State:</string>
    <string name="accept">Accept</string>
    <string name="complaint_time">Complaint Time: </string>
    <string name="complaint_date">Complaint Date: </string>
    <string name="complainer_contact">Complainer Contact: </string>
    <string name="new_complaint">New Complaint</string>
    <string name="reject">Reject</string>
    <string name="turn_on_location">TURN ON LOCATION</string>
    <string name="location_permission_text">Allow to turn on location permissions</string>
    <string name="permission_text">Location Permission Turned Off</string>
    <string name="new_version">New version</string>
    <string name="new_version_text">To use this application, you need to upgrade it to the latest version available on Google Play</string>
    <string name="update_now">update now</string>
</resources>