<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.dfa.customviews.CustomTextViewheading
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/new_complaint"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:font="@{`bold`}" />

        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">

                <com.dfa.customviews.CustomtextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complainer_contact" />

                <com.dfa.customviews.CustomtextView
                    android:id="@+id/txtComplainerContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.dfa.customviews.CustomtextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complaint_date" />

                <com.dfa.customviews.CustomtextView
                    android:id="@+id/txtComplaintDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:orientation="horizontal">

                <com.dfa.customviews.CustomtextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complaint_time" />

                <com.dfa.customviews.CustomtextView
                    android:id="@+id/txtComplaintTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_desc"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.dfa.customviews.CustomtextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <com.dfa.customviews.CustomtextView
                    android:id="@+id/txtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:weightSum="1.5"
            android:layout_below="@+id/layout_content"
            android:gravity="center">

            <com.dfa.customviews.CustomtextView
                android:id="@+id/btnAccept"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_green_bg"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/accept"
                android:textColor="@color/white"
                app:font="@{`bold`}" />

            <com.dfa.customviews.CustomtextView
                android:id="@+id/btnReject"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_background"
                android:gravity="center"
                android:text="@string/reject"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/white"
                app:font="@{`bold`}" />

            <com.dfa.customviews.CustomtextView
                android:id="@+id/btnOpen"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:background="@drawable/button_green_bg"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/open"
                android:textColor="@color/white"
                app:font="@{`bold`}" />
        </LinearLayout>
    </RelativeLayout>
</layout>