<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_10"
    android:layout_marginRight="@dimen/dp_10"
    android:background="@color/white"
    android:paddingBottom="@dimen/dp_15"
    android:paddingLeft="@dimen/dp_15"
    android:paddingRight="@dimen/dp_12"
    android:paddingTop="@dimen/dp_5">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/imageView"
            android:src="@drawable/app_icon"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/youAreNotUpdatedTitle"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/youAreNotUpdatedMessage"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_15" />

    <TextView
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_5"
        android:text="@string/update"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_16"
        android:textStyle="bold" />

</RelativeLayout>